--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "express": "latest",
+    "framer-motion": "^12.23.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.3.4",
