--- a/package.json
+++ b/package.json
@@ -40,14 +40,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "color-thief-browser": "^2.0.2",
+    "color-thief-react": "^2.1.0",
+    "colorthief": "^2.6.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "express": "latest",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.3.4",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
+    "node-vibrant": "^4.0.3",
     "path": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
