--- a/package.json
+++ b/package.json
@@ -59,10 +59,13 @@
     "react-hook-form": "^7.54.1",
     "react-player": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
+    "react-scan": "^0.4.3",
+    "react-window": "^2.0.0",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-context-selector": "^2.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -70,6 +73,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
